Projeto/Compilador/tests/cases/error/T11.pas
program T11;
var x: integer;
begin
  if x then
    x := 2;
end.
